--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -9,4 +9,13 @@
 
 <h3> {{band.name}} </h3>
 
+
 {% endfor%}
+
+{%for song in allsongs %}
+
+<h4>{{song.name}}</h4>
+<p>{{song.duration}}</p>
+<p></p>
+ {% endfor %}
+ 
