--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -7,9 +7,11 @@
 
 
 
- <div class="bands" >
 
- 	{% for band in allbands %}
- 	<p>{{band.name}}</p>
- 	{% endfor %}
- </div>
+
+{% for band in Bands %}
+<div class="hi">
+<p>{{band.name}}</p>
+
+</div>
+{% endfor %}
